implement bottom navigation and splash screen; update themes and color resources

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.TheMovies" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="NightAdjusted.Theme.TheMovies" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.TheMovies" parent="NightAdjusted.Theme.TheMovies">
+        <item name="android:forceDarkAllowed" tools:targetApi="29">false</item>
+    </style>
+
+    <style name="NightAdjusted.Theme.Splash" parent="Theme.TheMovies">
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
+    </style>
+
+    <style name="Theme.TheMovies.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+        <item name="postSplashScreenTheme">@style/Theme.TheMovies</item>
+    </style>
+
 </resources>
